Finish initial conversion to Swift 3

--- a/enHueco/Source/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Source/Views/Base.lproj/Main.storyboard
@@ -623,8 +623,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="jgc-Qh-xHN">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="jgc-Qh-xHN">
+                                <rect key="frame" x="0.0" y="64" width="600" height="428"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AvailableFriendCell" rowHeight="85" id="QC8-Xc-YZM" customClass="AvailableFriendCell" customModule="enHueco" customModuleProvider="target">
@@ -720,6 +720,15 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <containerView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tvp-Lj-uUY">
+                                <rect key="frame" x="0.0" y="492" width="600" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="GSh-eM-ZCh"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="cMJ-Al-XVa" kind="embed" id="Lel-gi-xtl"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -3177,6 +3186,19 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mBY-Se-0kG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4099" y="946"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qyR-kU-59t">
+            <objects>
+                <viewController id="cMJ-Al-XVa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ihv-Si-pyf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UYh-jM-5qv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
